# core

./: .gitignore  .travis.yml  INSTALL  Makefile.am  README.md  configure.ac  libgoldbitconsensus.pc.in
.tx/: config
build-aux/m4/: goldbit_find_bdb48.m4  goldbit_qt.m4  goldbit_subdir_to_include.m4
contrib/: README.md  goldbit-qt.pro  goldbitd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  control  copyright  goldbit-qt.install  goldbit-qt.lintian-overrides  goldbit-qt.protocol  goldbit-tx.install  goldbitd.bash-completion  goldbitd.examples  goldbitd.install  goldbitd.lintian-overrides  goldbitd.manpages  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  symbol-check.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-downloader/: petertodd-key.pgp
contrib/init/: README.md  goldbitd.conf  goldbitd.init  goldbitd.openrc  goldbitd.openrcconf  (+2 more)
depends/: README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  addrman.h  alert.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  goldbit-cli-res.rc  goldbit-cli.cpp  goldbit-tx-res.rc  goldbit-tx.cpp  goldbitd-res.rc  goldbitd.cpp  hash.h  httprpc.h  httpserver.cpp  (+61 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  goldbit.cpp  goldbit.qrc  goldbit_locale.qrc  goldbitaddressvalidator.cpp  goldbitaddressvalidator.h  goldbitamountfield.cpp  goldbitamountfield.h  goldbitgui.cpp  goldbitgui.h  goldbitstrings.cpp  goldbitunits.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  (+49 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  optionsdialog.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: goldbit_ar.ts  goldbit_be_BY.ts  goldbit_bg.ts  goldbit_ca.ts  goldbit_ca@valencia.ts  goldbit_ca_ES.ts  goldbit_cs.ts  goldbit_cy.ts  goldbit_da.ts  goldbit_de.ts  goldbit_el_GR.ts  goldbit_en.ts  goldbit_en_GB.ts  goldbit_eo.ts  goldbit_es.ts  goldbit_es_DO.ts  goldbit_es_MX.ts  goldbit_et.ts  goldbit_eu_ES.ts  goldbit_fa.ts  goldbit_fi.ts  goldbit_fr.ts  goldbit_fr_FR.ts  goldbit_gl.ts  goldbit_he.ts  goldbit_hu.ts  goldbit_id_ID.ts  goldbit_it.ts  goldbit_ja.ts  goldbit_ka.ts  goldbit_ko_KR.ts  goldbit_la.ts  goldbit_lv_LV.ts  goldbit_ms_MY.ts  goldbit_nb.ts  goldbit_nl.ts  goldbit_pam.ts  goldbit_pl.ts  goldbit_pt_BR.ts  goldbit_pt_PT.ts  (+11 more)
src/qt/res/: goldbit-qt-res.rc
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: goldbitconsensus.cpp  goldbitconsensus.h  interpreter.cpp  interpreter.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_goldbit_NativeSecp256k1.c  org_goldbit_NativeSecp256k1.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  goldbit-util-test.py  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  script_P2SH_tests.cpp  (+17 more)
src/test/data/: README.md  goldbit-util-test.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+146 files in other folders)
